cmss/e-forms/objects/Threshold_Value__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>a0i4E000000AUYn</inlineHelpText>
    <label>External_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>