cmss/e-forms/objects/Threshold_Value__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>