cmss/e-forms/objects/Threshold_Value__c/fields/Limit_Min__c.field-meta.xml
<CustomField>
    <fullName>Limit_Min__c</fullName>
    <label>Limit Min</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>