cmss/e-forms/objects/Threshold_Value__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Threshold Values</relationshipLabel>
    <relationshipName>Threshold_Values</relationshipName>
    <type>Lookup</type>
</CustomField>