cmss/e-forms/objects/Threshold_Value__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>