cmss/e-forms/objects/Threshold_Value__c/listViews/All_SUFO.listView-meta.xml
<ListView>
    <fullName>All_SUFO</fullName>
    <columns>NAME</columns>
    <columns>Text_Value__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>sufo</value>
    </filters>
    <label>All_SUFO</label>
    <language>en_US</language>
</ListView>